Bootstrap, DB init, API, and Users page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,49 +2,63 @@
 <html>
 <head>
  	<meta charset="UTF-8"> 
-	<link rel="stylesheet" href="{{root}}/css/semantic.min.css">
+	<link rel="stylesheet" href="{{root}}/css/bootstrap.min.css">
 	<script src="{{root}}/js/jquery.min.js"></script>
-	<script src="{{root}}/js/semantic.min.js"></script>
+	<script src="{{root}}/js/bootstrap.min.js"></script>
 	<script src="{{root}}/js/turbolinks.min.js"></script>
 <title>Info</title>
 </head>
 
 <body>
-<div class="application">
-<div class="ui left thin visible sidebar vertical menu">
-    <a href="{{root}}/home" class="item">
-    	<i class="dashboard icon"></i>
-  		Dashboard
-    </a>
-    <a href="{{root}}/reports" class="item">
-    	<i class="bar chart icon"></i>
-      	Reports
-    </a>
-    <a href="{{root}}/classes" class="item">
-    	<i class="student icon"></i>
-      	Classes
-    </a>
-    <a href="{{root}}/classes" class="item">
-    	<i class="user icon"></i>
-    	Users
-	</a>
-	<a href="{{root}}/classes" class="item">
-		<i class="cloud upload icon"></i>
-		Upload
-	</a>
-  </div>
-  <div class="pusher">
-    <div id="hey">
-	You are viewing {{page}}
+
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Attendance Tracker</a>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{{root}}/upload">Upload<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{root}}/users">Users</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+
+
 
     {% include  '' ~ page ~ '.html' %}
 
-	</div>
-  </div>
-</div>
+      <hr>
+
+      <footer>
+        <p>Copyright 2017 <a href="jamwheeler.com">Jonathan Wheeler</a>, licensed under the <a href="https://opensource.org/licenses/MIT">MIT Licence</a></p>
+      </footer>
+    </div> <!-- /container -->
 
 
 
-
-</body>
 </html>
